tests/baselines/reference/parser0_004152.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.ts (34 errors) ====
    export class Game {
                 ~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
        private position = new DisplayPosition([), 3, 3, 3, 3, 3, 0, 3, 3, 3, 3, 3, 3, 0], NoMove, 0);
                                                ~
!!! error TS1137: Expression or comma expected.
                                                 ~
!!! error TS1005: ';' expected.
                                                    ~
!!! error TS1005: ';' expected.
                                                       ~
!!! error TS1005: ';' expected.
                                                          ~
!!! error TS1005: ';' expected.
                                                             ~
!!! error TS1005: ';' expected.
                                                                ~
!!! error TS1005: ';' expected.
                                                                   ~
!!! error TS1005: ';' expected.
                                                                      ~
!!! error TS1005: ';' expected.
                                                                         ~
!!! error TS1005: ';' expected.
                                                                            ~
!!! error TS1005: ';' expected.
                                                                               ~
!!! error TS1005: ';' expected.
                                                                                  ~
!!! error TS1005: ';' expected.
                                                                                     ~
!!! error TS1005: ';' expected.
                                                                                        ~
!!! error TS1005: ';' expected.
                                                                                         ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                                                                                                 ~
!!! error TS1005: ';' expected.
                                                                                                    ~
!!! error TS1005: ';' expected.
                                                                                                     ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                               ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DisplayPosition'.
                                                      ~
!!! error TS2300: Duplicate identifier '3'.
                                                         ~
!!! error TS2300: Duplicate identifier '3'.
                                                            ~
!!! error TS2300: Duplicate identifier '3'.
                                                               ~
!!! error TS2300: Duplicate identifier '3'.
                                                                     ~
!!! error TS2300: Duplicate identifier '3'.
                                                                        ~
!!! error TS2300: Duplicate identifier '3'.
                                                                           ~
!!! error TS2300: Duplicate identifier '3'.
                                                                              ~
!!! error TS2300: Duplicate identifier '3'.
                                                                                 ~
!!! error TS2300: Duplicate identifier '3'.
                                                                                    ~
!!! error TS2300: Duplicate identifier '3'.
                                                                                       ~
!!! error TS2300: Duplicate identifier '0'.
                                                                                                   ~
!!! error TS2300: Duplicate identifier '0'.
        private prevConfig: SeedCoords[][];
                            ~~~~~~~~~~
!!! error TS2304: Cannot find name 'SeedCoords'.
    }